--- a/style.css
+++ b/style.css
@@ -4,3 +4,8 @@ h1 {border-color: blueviolet;
     border-style: solid;
     border-width: 5px;
 }
+
+.parte01 {background-color: bisque;
+}
+.parte02 {background-color: blueviolet;
+}
