--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@ h1 {border-color: blueviolet;
     border-width: 5px;
 }
 
-.parte01 {background-color: bisque;
-}
-.parte02 {background-color: blueviolet;
+
+#parte02 {background-color: blueviolet;
 }
 #parte01 {background-color: bisque;
 }
