--- a/style.css
+++ b/style.css
@@ -12,5 +12,5 @@ h1 {border-color: blueviolet;
 }
 .parte01 {background-color: aquamarine;
 }
-#parte01 {border: 500%;
+#parte01 {border size: 200%;
 }
